[gd_scene load_steps=4 format=3 uid="uid://bmcyqv1lwjlia"]

[ext_resource type="Script" uid="uid://dneburlsv77yd" path="res://Managers/talk_npc.gd" id="1_7tt2a"]
[ext_resource type="Texture2D" uid="uid://b7pp08eiiqm6" path="res://assets/Villager-Face.png" id="1_rivfn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7tt2a"]
size = Vector2(745, 502)

[node name="Shady guy" type="Node2D"]

[node name="Talk" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_7tt2a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Talk"]
position = Vector2(-6, -3)
shape = SubResource("RectangleShape2D_7tt2a")

[node name="Sprite2D" type="Sprite2D" parent="Talk"]
scale = Vector2(3, 3)
texture = ExtResource("1_rivfn")

[node name="Label" type="Label" parent="."]
visible = false
z_index = 201
offset_left = 195.0
offset_top = -161.0
offset_right = 1001.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 64
text = "Have you seen the crabs? (X to skip cutscene)"

[node name="Label2" type="Label" parent="."]
visible = false
z_index = 201
offset_left = 221.0
offset_top = 7.0
offset_right = 1262.0
offset_bottom = 137.0
theme_override_font_sizes/font_size = 64
text = "Yeah, I got attacked by some (X to skip cutscene)"

[node name="Label3" type="Label" parent="."]
visible = false
z_index = 201
offset_left = 248.0
offset_top = 134.0
offset_right = 1071.0
offset_bottom = 586.0
theme_override_font_sizes/font_size = 64
text = "I have been researching these crabs and I am trying to stop these crabs. (X to skip cutscene)"
autowrap_mode = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="Talk" to="Talk" method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="Talk" method="_on_timer_timeout"]
